# 6CS012

./: AI_Worksheet_1.ipynb  README.md  defense.html  proposal_defense.html
Coursework CV/: Vision_coursework.ipynb  Vision_coursework_G4_optimized.ipynb
Coursework NLP/: 2407061_RahulDevBanjara_Text_Classification.ipynb  Language_Task_Coursework.ipynb  config.pkl  gui.py  pyproject.toml  vocab.pkl  w2vLanguage_Task_Coursework.ipynb
Coursework NLP/.gradio/flagged/: dataset1.csv
Week0/: AI_Worksheet_0.ipynb
Week1/: Task1.ipynb  Task2.ipynb  Task3.ipynb
Week2/: WS02_MNIST_Digit_Classification.ipynb  Week2.ipynb
Week3/: workshop_03_MCP_and_Classification.ipynb
Week4/: workshop4_mlp.ipynb
Week5/: worksheet5-torch_cnn.ipynb  worksheet5_cnn_fruits.ipynb
Week6/: worksheet6_cnn_optm.ipynb
Week7/: tutorial7_denoising_autoencoder.ipynb
Week8/: Text_Preprocessing.ipynb  Text_Preprocessing_and_Classification.ipynb
Week9/: week9_workshop.ipynb
